--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,8 @@
 <h1> Supppp </h1>
 <% @users.each do |u| %>
 <h2> Hey new user <%= u.name %></h2>
+<%= u.id %>
+<%= link_to "user page", user_path(u.id) %>
+<% end %>
+</br>
+<%= link_to "Add a new user", new_user_path %>
