--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,3 @@
-<%= form_for @user do |u| %>
-	Name: <%= u.text_field :name %>
-	<%= u.submit "Create a new user" %>
-	<% end %>
-
-	<%= link_to "Back to the list", users_path %>
+<h1> Create a new User </h1>
+<%= render 'userform' %>
+<%= link_to "Back to the list", users_path %>
