--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 </head>
 <body>
+<% if current_user %>
+	<h2> Logged in as <%= current_user.name%> <%= link_to "Logout", logout_path %> </h2>
+<% else %>
+	<%= link_to "Login", login_path %><br>
+	<%= link_to "Sign up", signup_path %>
+
+<% end %>
 
 <%= yield %>
 
