Attached the rspec file to the project to allow testing. Removed unessecary fields from the user model

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,2 +1,6 @@
-
-<%= link_to "Create a new user", new_user_path %>
+<%= form_for :user, url: '/login'  do |f| %>
+Email:	<%= f.text_field :email %>
+Password :<%= f.password_field :password %>
+	<%= f.submit "Login" %>
+Hello world
+<% end %>
