Created a form for users to add books, user can now add books
[#85808684]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <body>
 <% if current_user %>
 	<h2> Logged in as <%= current_user.name%> <%= link_to "Logout", logout_path %> </h2>
+	<h3> <%= current_user.id %> </h3>
 <% else %>
 	<%= link_to "Login", login_path %><br>
 	<%= link_to "Sign up", signup_path %>
