--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,11 @@
-<%= @user.name %>
-<%= link_to 'Edit user', edit_user_path(@user.id) %>
+<h1> Hello <%= current_user.name %> </h2>
+<h2> Your books</h2>
+<% if current_user.books %>
+<% current_user.books.each do |b| %>
+<%= b.title %><br>
+<%= b.pages %><br>
+<% end %>
+<% end %>
+<%= link_to 'Add a book', new_book_path %><br>
+<%= link_to 'Edit user', edit_user_path(@user.id) %><br>
 <%= button_to 'Delete User', @user, method: :delete%>
