--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <body>
 
 <div id="layout" class="pure-g">
-   <%= render 'header' %>
+   <%= render 'sidebar' %>
 
     <div class="content pure-u-1 pure-u-md-3-4">
     	<h1> Hello <%= current_user.name %> </h2>
