--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,8 +1,8 @@
 <body>
 
 <div id="layout" class="pure-g">
-	
-    <%= render 'users/header' %>
+
+    <%= render 'users/sidebar' %>
 
     <div class="content pure-u-1 pure-u-md-3-4">
 
