--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -2,7 +2,7 @@
 
 <div id="layout" class="pure-g">
 	
-    <%= render 'users/header' %>
+    <%= render 'users/sidebar' %>
 
     <div class="content pure-u-1 pure-u-md-3-4">
 
@@ -23,4 +23,4 @@
 
 
 </body>
-</html>
+
