--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 
 <body>
 <div id="layout" class="pure-g">
-   <%= render 'users/header' %>
+   <%= render 'users/sidebar' %>
 
     <div class="content pure-u-1 pure-u-md-3-4">
 
