--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -5,7 +5,24 @@
     <%= render 'users/sidebar' %>
 
     <div class="content pure-u-1 pure-u-md-3-4">
-
+    	<h1> Recently added books </h1>
+				<div class="pure-g">
+    				<div class="pure-u-1-3">
+    					<% if @books[-1] %>
+							<h2> <%= @books[-1].title %> </h2>
+                		<% end %>
+                	</div>
+    				<div class="pure-u-1-3">
+    				 <% if @books[-2] %>
+                			<h2> <%= @books[-2].title %> </h2>
+               		 <% end %>
+            		</div>
+   					 <div class="pure-u-1-3">  
+   					 	<% if @books[-3] %>
+                			<h2> <%= @books[-3].title %> </h2>
+						<% end %>
+					</div>
+				</div>
     	
     </div>
 </div>
