--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -10,6 +10,9 @@
 	                    <li class="nav-item">
 	                        <%= link_to "Add Books",new_book_path,:class => "pure-button" %>
 	                    </li>
+	                     <li class="nav-item">
+	                        <%= link_to "Add Lists",new_list_path,:class => "pure-button" %>
+	                    </li>
 	                </ul>
             <% else %>
 	            <%= form_for :user,:html => {:class => 'pure-form'}, url: '/login'  do |f| %>
