--- a/app/views/users/_userform.html.erb
+++ b/app/views/users/_userform.html.erb
@@ -1,24 +1,19 @@
 <%= form_for(@user, :html => {:class => "pure-form pure-form-aligned"}) do |u| %>
 	<fieldset>
-		<div class="pure-control-group">
-		  <%= u.label :name %> 
-		  <%= u.text_field :name %>
+		<div class="pure-control-group"> 
+		  <%= u.text_field :name, placeholder: 'name', :class => 'pure-input-1-3' %>
 		</div>
 		<div class="pure-control-group">
-		  <%= u.label :username %>
-		  <%= u.text_field :username %>
+		  <%= u.text_field :username, placeholder: 'username', :class => 'pure-input-1-3' %>
 		 </div>
 		 <div class="pure-control-group">
-		  <%= u.label :email %>
-		  <%= u.text_field :email %>
+		  <%= u.text_field :email, placeholder: 'email', :class => 'pure-input-1-3' %>
 		</div>  
 		<div class="pure-control-group">
-		  <%= u.label :password %>
-		  <%= u.password_field :password %>
+		  <%= u.password_field :password, placeholder: 'password', :class => 'pure-input-1-3' %>
 		 </div>
 		 <div class="pure-control-group">
-		  <%= u.label :password_confirmation %>
-		  <%= u.password_field :password_confirmation %>
+		  <%= u.password_field :password_confirmation, placeholder: 'confirm password', :class => 'pure-input-1-3' %>
 		 </div>
 		<div class="button">
 		  <%= u.submit "sumbit", :class =>"pure-button pure-button-primary" %>
