--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,14 +4,25 @@
    <%= render 'sidebar' %>
 
     <div class="content pure-u-1 pure-u-md-3-4">
-    	<h1> Hello <%= current_user.name %> </h2>
-    		<h2> Your books</h2>
-				<% if current_user.books %>
-				<% current_user.books.each do |b| %>
-				<%= b.title %><br>
-				<%= b.pages %><br>
-				<% end %>
-				<% end %>
+			<h1> <%= current_user.name %>'s Recently Added Books </h1>
+                <div class="pure-g">
+                    <div class="pure-u-1-3">
+                        <% if current_user.books[-1] %>
+                            <h2> <%= current_user.books[-1].title %> </h2>
+                        <% end %>
+                    </div>
+                    <div class="pure-u-1-3">
+                     <% if current_user.books[-2] %>
+                            <h2> <%= current_user.books[-2].title %> </h2>
+                     <% end %>
+                    </div>
+                     <div class="pure-u-1-3">  
+                        <% if current_user.books[-3] %>
+                            <h2> <%= current_user.books[-3].title %> </h2>
+                        <% end %>
+                    </div>
+                </div>
+
     </div>
 </div>
 
