adding more detailed logs to heroku

--- a/app/views/books/_bookform.html.erb
+++ b/app/views/books/_bookform.html.erb
@@ -6,7 +6,11 @@
 		</div>
 		<div class="pure-control-group">
 		  <%= u.label :pages %>
-	
+		  <%= u.text_field :pages %>
+		 </div>
+		 		<div class="pure-control-group">
+		  <%= u.label :author %>
+		  <%= u.text_field :author %>
 		 </div>
 		  <%= u.submit "sumbit", :class =>"pure-button pure-button-primary" %>
 		</div>
