--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,25 @@
    <%= render 'sidebar' %>
 
     <div class="content pure-u-1 pure-u-md-3-4">
+        <h2> Currently Reading </h2>
+        <% if current_user.current %>
+        <div class='pure-g'>
+            <div class='pure-u-1-3'>
+         <%= current_user.current.title %> <br>
+         By: <%= current_user.current.author %>
+            </div>
+            <div class='pure-u-1-3'>
+         progress <br>
+         <%=current_user.current.pages_read %>/ <%=current_user.current.pages %> pages<br>
+            </div>
+             <div class='pure-u-1-3'>
+         <%= link_to 'Finished', done_path %> <br>
+         <%= link_to 'progress', new_current_path %>
+             </div>
+        </div>
+         <% else %>
+        <%= link_to 'add a currently reading book', new_current_path %>
+         <% end %>
 			<h1> <%= current_user.name %>'s Recently Added Books </h1>
                 <div class="pure-g">
                     <div class="pure-u-1-3">
