--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
             </div>
              <div class='pure-u-1-3'>
          <%= link_to 'Finished', done_path %> <br>
-         <%= link_to 'progress', new_current_path %>
+         <%= link_to 'progress', edit_current_path %>
              </div>
         </div>
          <% else %>
