--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,22 +8,24 @@
         <% if current_user.current %>
         <div class='pure-g'>
             <div class='pure-u-1-3'>
-         <%= current_user.current.title %> <br>
-         By: <%= current_user.current.author %>
+         <div id='miniheader'>  <%= current_user.current.title %> </div> <br>
+          By: <%= current_user.current.author %>
             </div>
             <div class='pure-u-1-3'>
-         progress <br>
-         <%=current_user.current.pages_read %>/ <%=current_user.current.pages %> pages<br>
+         <div id='miniheader'> progress </div> <br>
+         <div class="progress-bar blue stripes">
+            <span style="width: <%= @answer %>%"></span>
+        </div>
             </div>
              <div class='pure-u-1-3'>
-         <%= link_to 'Finished', done_path %> <br>
-         <%= link_to 'progress', edit_current_path %>
+         <%= link_to 'Finished', done_path, :class => "pure-button" %> <br>
+         <%= link_to 'progress', edit_current_path, :class => "pure-button" %>
              </div>
         </div>
          <% else %>
         <%= link_to 'add a currently reading book', new_current_path %>
          <% end %>
-			<h1> <%= current_user.name %>'s Recently Added Books </h1>
+			<h2> <%= current_user.name %>'s Recently Read Books </h2>
                 <div class="pure-g">
                     <div class="pure-u-1-3">
                         <% if current_user.books[-1] %>
