--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <div class="sidebar pure-u-1 pure-u-md-1-4">
     <div class="header">
         <h1 class="brand-title">BOOK BOOKS</h1>
+        <%= render 'layouts/error' %>
 			<% if current_user %>
 			  <nav class="nav">
 	                <ul class="nav-list">
