--- a/app/views/users/_userform.html.erb
+++ b/app/views/users/_userform.html.erb
@@ -1,5 +1,6 @@
 <%= form_for(@user, :html => {:class => "pure-form pure-form-aligned"}) do |u| %>
 	<fieldset>
+		<%= render 'layouts/error' %>
 		<div class="pure-control-group"> 
 		  <%= u.text_field :name, placeholder: 'name', :class => 'pure-input-1-3' %>
 		</div>
