--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,17 +1,32 @@
 #wide {
-	padding-left: 115px;
-	padding-right: 115px;
+    margin-right: 85px;
+
 }
 #miniheader {
 	font-size: 20px;
 	font-weight: bold;
 	color: blue;
 }
+// Css for light blue button
+ .button-secondary {
+      background: rgb(66, 184, 221); /* this is a light blue */
+}
+
+
+
+
+
+
+
+
+
+
+// Progress Bar CSS
 .progress-bar {
     background-color: #1a1a1a;
     height: 25px;
     padding: 5px;
-    width: 100%;
+    width: 80%;
     margin: 0;         
     border-radius: 5px;
     box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;           
