--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
    <%= render 'sidebar' %>
 
     <div class="content pure-u-1 pure-u-md-3-4">
+         <!-- currently reading books -->
+        <div id='currently_reading'>
         <h2> Currently Reading </h2>
         <% if current_user.current %>
         <div class='pure-g'>
@@ -18,31 +20,38 @@
         </div>
             </div>
              <div class='pure-u-1-3'>
-         <%= link_to 'Finished', done_path, :class => "pure-button" %> <br>
-         <%= link_to 'progress', edit_current_path, :class => "pure-button" %>
+         <%= button_to 'Finished', done_path, :class => "pure-button pure-button-primary" , :method => :get %> <br>
+         <%= button_to 'Progress', edit_current_path, :class => "pure-button pure-button-primary button-large", :method => :get %>
              </div>
         </div>
          <% else %>
-        <%= link_to 'add a currently reading book', new_current_path %>
+        <%=button_to 'add a currently reading book', new_current_path, :class => "pure-button pure-button-primary button-large", :method => :get %>
          <% end %>
+     </div>
+         <!-- recently read books -->
+         <div id= 'recently read'>
 			<h2> <%= current_user.name %>'s Recently Read Books </h2>
                 <div class="pure-g">
                     <div class="pure-u-1-3">
                         <% if current_user.books[-1] %>
                             <h2> <%= current_user.books[-1].title %> </h2>
+                            <h3> <%= current_user.books[-1].author %> </h3>
                         <% end %>
                     </div>
                     <div class="pure-u-1-3">
                      <% if current_user.books[-2] %>
                             <h2> <%= current_user.books[-2].title %> </h2>
+                            <h3> <%= current_user.books[-2].author %> </h3>
                      <% end %>
                     </div>
                      <div class="pure-u-1-3">  
                         <% if current_user.books[-3] %>
                             <h2> <%= current_user.books[-3].title %> </h2>
+                            <h3> <%= current_user.books[-3].author %> </h3>
                         <% end %>
                     </div>
                 </div>
+            </div>
 
     </div>
 </div>
