added some styling

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -7,6 +7,10 @@
 	font-weight: bold;
 	color: blue;
 }
+#light_blue {
+    background-color: #26ADE4;
+    
+}
 // Css for light blue button
  .button-secondary {
       background: rgb(66, 184, 221); /* this is a light blue */
