--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,36 +1,21 @@
-<body>
+<body id="light_blue">
 
-<div id="layout" class="pure-g">
 
-    <%= render 'users/sidebar' %>
-
-    <div class="content pure-u-1 pure-u-md-3-4">
-    	<h1> Recently added books </h1>
-				<div class="pure-g">
-    				<div class="pure-u-1-3">
-    					<% if @books[-1] %>
-							<h2> <%= @books[-1].title %> </h2>
-                		<% end %>
-                	</div>
-    				<div class="pure-u-1-3">
-    				 <% if @books[-2] %>
-                			<h2> <%= @books[-2].title %> </h2>
-               		 <% end %>
-            		</div>
-   					 <div class="pure-u-1-3">  
-   					 	<% if @books[-3] %>
-                			<h2> <%= @books[-3].title %> </h2>
-						<% end %>
-					</div>
-				</div>
-    	
-    </div>
+        <%= image_tag("Bookbooks.jpg", :alt => "Bookbooks feed")%>
+        <div id="layout" class="pure-g">
+        <div class="pure-u-1-2" >
+            <%= form_for :user,:html => {:class => 'pure-form'}, url: '/login'  do |f| %>
+                <fieldset class ='pure-group'>
+                    <%= f.text_field :email, placeholder:'email', :class => 'pure-input-1' %>
+                    <%= f.password_field :password, placeholder:'password', :class => 'pure-input-1' %>
+                </fieldset>
+                    <%= f.submit "Login", :class => "pure-button pure-input-1 pure-button-primary" %>
+                <% end %>
+        </div>
+        <div class="pure-u-1-2">
+            <%= render 'users/userform' %>
+        </div>
 </div>
 
 
-
-
-
-
 </body>
-</html>
