--- a/app/views/users/_userform.html.erb
+++ b/app/views/users/_userform.html.erb
@@ -1,23 +1,19 @@
 <%= form_for(@user, :html => {:class => "pure-form pure-form-aligned"},  url: '/signup') do |u| %>
 	<fieldset>
-		<%= render 'layouts/error' %>
 		<div class="pure-control-group"> 
-		  <%= u.text_field :name, placeholder: 'name', :class => 'pure-input-1-3' %>
+		  <%= u.text_field :name, placeholder: 'name', :class => 'pure-input-1' %>
 		</div>
-		<div class="pure-control-group">
-		  <%= u.text_field :username, placeholder: 'username', :class => 'pure-input-1-3' %>
-		 </div>
 		 <div class="pure-control-group">
-		  <%= u.text_field :email, placeholder: 'email', :class => 'pure-input-1-3' %>
+		  <%= u.text_field :email, placeholder: 'email', :class => 'pure-input-1' %>
 		</div>  
 		<div class="pure-control-group">
-		  <%= u.password_field :password, placeholder: 'password', :class => 'pure-input-1-3' %>
+		  <%= u.password_field :password, placeholder: 'password', :class => 'pure-input-1' %>
 		 </div>
 		 <div class="pure-control-group">
-		  <%= u.password_field :password_confirmation, placeholder: 'confirm password', :class => 'pure-input-1-3' %>
+		  <%= u.password_field :password_confirmation, placeholder: 'confirm password', :class => 'pure-input-1' %>
 		 </div>
 		<div class="button">
-		  <%= u.submit "sumbit", :class =>"pure-button pure-button-primary" %>
+		  <%= u.submit "sign up", :class =>"pure-button pure-button-primary pure-input-1" %>
 		</div>
   	</fieldset>
 <% end %>
