--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,5 +1,5 @@
 <div class="pure-g">
-    <div class="pure-u-1 pure-u-md-2-24"> ... </div>
+    <div class="pure-u-1 pure-u-md-2-24">  </div>
     <div class="pure-u-1 pure-u-md-20-24 borderbot"> 
         <%= image_tag("Bookbooks.jpg", :alt => "Bookbooks header img", :width => 1198)%>
         <div class="pure-u-1 pure-u-md-11-24 " id='center'>
@@ -23,7 +23,7 @@
             <h2> Signup</h2>
             <%= render 'users/userform' %>
         </div> </div>
-    <div class="pure-u-1 pure-u-md-2-24"> ... </div>
+    <div class="pure-u-1 pure-u-md-2-24"> </div>
 </div>
  
 
