--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -3,7 +3,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-
+/* css for the buttons*/
 a {
     text-decoration: none;
     color: rgb(61, 146, 201);
