--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -3,6 +3,7 @@
     <div class="pure-u-1 pure-u-md-20-24 borderbot"> 
         <%= image_tag("Bookbooks.jpg", :alt => "Bookbooks header img", :width => 1198)%>
         <div class="pure-u-1 pure-u-md-11-24 " id='center'>
+            <!-- login form -->
             <h2> Login </h2>
             <%= form_for :user,:html => {:class => 'pure-form pure-form-alighed'}, url: '/login'  do |f| %>
             <fieldset>
