--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,7 @@
           By: <%= current_user.current.author %>
             </div>
             <div class='pure-u-1-3'>
+                  <!-- progress bar -->
          <div id='miniheader'> progress </div> <br>
          <div class="progress-bar blue stripes">
             <span style="width: <%= @answer %>%"></span>
